# NuWidgets

./: Cargo.toml  README.md  default.nix  nuwidgets.nix
src/: app.rs  audio.rs  loaded_icons.rs  main.rs  tray.rs
src/widgets/: clock.rs  memory.rs  mod.rs  volume.rs
