[package]
name = "NuWidgets"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
eframe = { version = "0.31.1", features = ["wgpu", "wayland", "x11"]}
egui_extras = { version = "0.31.1", features = ["all_loaders"]}
chrono = "0.4.41"
sysinfo = "0.36.1"
alsa = "0.9.1"
system-tray = "0.8.1"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
icon = "0.1.2"

dbus = "0.9.7"
thiserror = "2.0.12"